@@ -1,6 +1,14 @@
 2017-06-03  Hidehisa Akiyama  <akky@users.sourceforge.jp>
 
 	* src/qt4/Makefile.am:
+	* src/qt4/evaluation_window.h:
+	* src/qt4/field_canvas.cpp:
+	* src/qt4/field_canvas.h:
+	* src/qt4/main_window.cpp:
+	* src/qt4/main_window.h:
+	- EvaluationWindowをコンパイル対象から削除．
+
+	* src/qt4/Makefile.am:
 	* src/qt4/debug_message_window.cpp:
 	* src/qt4/debug_message_window.h:
 	- EvaluatorControlPanelの使用を停止．コンパイル対象からも削除．
